Create CRUD operation for Transaction and User

--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     runtimeOnly('mysql:mysql-connector-java')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.springframework.security:spring-security-test')
+
+    compileOnly 'org.projectlombok:lombok:1.18.4'
 }
