Add jUnit plugin. Some changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Connect database
 spring.datasource.url=jdbc:mysql://localhost:3306/home_budget?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=janowik
+spring.datasource.password=tracer
 
 server.port=${port:8080}
 
