--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-#Connect database
+#database
 spring.datasource.url=jdbc:mysql://localhost:3306/home_budget?serverTimezone=UTC
 spring.datasource.username=Janowik
 spring.datasource.password=tracer
 
 server.port=${port:8080}
+
+
+#spring.main.web-application-type=none
+#spring.profiles.active=default
 
 #Hibernate
 spring.jpa.show-sql = true
