--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=tracer
 server.port=${port:8080}
 
 
-#spring.main.web-application-type=none
+spring.main.web-application-type=none
 #spring.profiles.active=default
 
 #Hibernate
